Version 6.9
TODO
    - fix python 3.9 issues #42 #44
    - fix regex warning #45

Version 6.8
07 October 2020
    - fix #37: update copyright date and notices
    - fix #39: Slow mail retrieval
    - pull #40: fix UnboundLocalError when socket.error inside POP3_SSL_EXTENDED

Version 6.7
01 September 2020
    - use $XDG_CONFIG_HOME if defined
    - fix pip install (doc/man below site-packages)
    - fix #34: quote only for select

Version 6.6
29 August 2020
    - fix #34: quote mailbox if necessary
    - fix #36: use setuptools, suggest pip to install and uninstall

Version 6.5
28 August 2020
    - fix #23: port getmail-gmail-xoauth-tokens
    - fix #24: TypeError: 'gaierror' object is not subscriptable
    - documentation fixes

Version 6.4
24 August 2020
    - fix #20: mboxrd can't concat str to bytes
    - fix #21: version numbering from 6.0x to 6.x

Version 6.03
17 August 2020
    - fix #14: IDLE not working
    - documentation update

Version 6.02
12 August 2020
    - try to do as little own decoding as possible
    - issue #8

Version 6.01
    - fixes of reported issues on github up to #7

Version 6.00
02 May 2020
    - Make code compatible to Python 3 (losing some backward compatibility)

Version 5.14
19 August 2019
    -remove socket setblocking() calls which should be no longer needed,
    and which may have caused hangups.  Thanks: Viacheslav Chimishuk.
    -correct version number string in error message.  Thanks: Piet van
    Oostrum.

Version 5.13
22 February 2019
    -second attempt at fixing SNI change with Python < 2.7.  Thanks: "Cimbal".

Version 5.12
22 February 2019
    -bugfix: the SNI change broke something else with Python 2.6 and earlier;
    fixed.  Thanks: "Cimbal".

Version 5.11
13 February 2019
    -bugfix: the SNI change did not work correctly with Python < 2.7.13;
    should be fixed now.  Thanks: Scott Robbins.

Version 5.10
12 February 2019
    -experimental: when SSL SNI support is present in the underlying Python